# pokemon-sdk-rust

./: Cargo.toml  README.md
src/: api_error.rs  client.rs  core_client.rs  lib.rs  pokemon_sdk.rs  retry_policy_mod.rs
src/games_api/: api.rs  model.rs
src/pokemon_api/: api.rs  model.rs
tests/: integration_test.rs
