[package]
name = "pokemon-api-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1" }
reqwest-middleware = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
reqwest-retry = { version = "0.6" }
thiserror = "1.0"
anyhow = "1.0"
url = "2.5"


[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
wiremock = "0.6"
